@@ -3,6 +3,7 @@ Version 6.2
   * Fixed bug in nnetar where the initial predictor vector was reversed.
   * Corrected model name returned in nnetar().
   * Fixed bug in accuracy() when non-integer seasonality used.
+  * Made auto.arima() robust to non-integer seasonality.
 
 Version 6.1 (11 May 2015)
   * Made auto.arima more robust
